tests/negative/typecheck/infer-non-sum.orng
fn main() -> Int {
    let x: Int = .lol
    0
}